[package]
name = "bismuthcubers"
version = "0.1.1"
edition = "2024"

#name = "bismuthcubers"
description = "ROLAP server compatible with SSAS and XMLA 1.1 in Rust"
authors = ["Your Name <your@email.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/potapovsv/bismuthcubers"

[dependencies]
yaserde = { version = "0.12" }
#yaserde_derive = "0.5.1"
actix-web = "4.10.2"
log = "0.4.27"
env_logger = "0.9.3"

quick-xml = { version = "0.23", features = ["serialize"] } # для парсинга XMLA

tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
# Логгирование
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }